--- a/partials/app.css
+++ b/partials/app.css
@@ -1,3 +1,7 @@
+body {
+  background: #FC4B83;
+}
+
 header {
   position: fixed;
   top: 0;
@@ -24,8 +28,8 @@ header .return-btn {
 }
 
 .container {
-  width: 95%;
-  margin: 80px auto 0;
+  background: white;
+  padding: 80px 2.5vw 30px;
 }
 
 a {
